build/log/idf_py_stdout_output_5138
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/experiments/exp_gpio.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/experiments/exp_gpio.c.obj 
/home/wyp/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/wyp/esp/stem_framework_idf61_lcd/build/config -I/home/wyp/esp/stem_framework_idf61_lcd/main -I/home/wyp/esp/stem_framework_idf61_lcd/main/core -I/home/wyp/esp/stem_framework_idf61_lcd/main/ui -I/home/wyp/esp/stem_framework_idf61_lcd/main/input -I/home/wyp/esp/stem_framework_idf61_lcd/main/display -I/home/wyp/esp/stem_framework_idf61_lcd/main/experiments -I/home/wyp/esp/esp-idf/components/newlib/platform_include -I/home/wyp/esp/esp-idf/components/freertos/config/include -I/home/wyp/esp/esp-idf/components/freertos/config/include/freertos -I/home/wyp/esp/esp-idf/components/freertos/config/xtensa/include -I/home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/wyp/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/wyp/esp/esp-idf/components/freertos/esp_additions/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/include/soc -I/home/wyp/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/wyp/esp/esp-idf/components/esp_hw_support/dma/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/wyp/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/home/wyp/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/home/wyp/esp/esp-idf/components/heap/include -I/home/wyp/esp/esp-idf/components/heap/tlsf -I/home/wyp/esp/esp-idf/components/log/include -I/home/wyp/esp/esp-idf/components/soc/include -I/home/wyp/esp/esp-idf/components/soc/esp32s3 -I/home/wyp/esp/esp-idf/components/soc/esp32s3/include -I/home/wyp/esp/esp-idf/components/soc/esp32s3/register -I/home/wyp/esp/esp-idf/components/hal/platform_port/include -I/home/wyp/esp/esp-idf/components/hal/esp32s3/include -I/home/wyp/esp/esp-idf/components/hal/include -I/home/wyp/esp/esp-idf/components/esp_rom/include -I/home/wyp/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/wyp/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/wyp/esp/esp-idf/components/esp_rom/esp32s3 -I/home/wyp/esp/esp-idf/components/esp_common/include -I/home/wyp/esp/esp-idf/components/esp_system/include -I/home/wyp/esp/esp-idf/components/esp_system/port/soc -I/home/wyp/esp/esp-idf/components/esp_system/port/include/private -I/home/wyp/esp/esp-idf/components/xtensa/esp32s3/include -I/home/wyp/esp/esp-idf/components/xtensa/include -I/home/wyp/esp/esp-idf/components/xtensa/deprecated_include -I/home/wyp/esp/esp-idf/components/lwip/include -I/home/wyp/esp/esp-idf/components/lwip/include/apps -I/home/wyp/esp/esp-idf/components/lwip/include/apps/sntp -I/home/wyp/esp/esp-idf/components/lwip/lwip/src/include -I/home/wyp/esp/esp-idf/components/lwip/port/include -I/home/wyp/esp/esp-idf/components/lwip/port/freertos/include -I/home/wyp/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/wyp/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/wyp/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/wyp/esp/esp-idf/components/esp_driver_uart/include -I/home/wyp/esp/esp-idf/components/vfs/include -I/home/wyp/esp/esp-idf/components/esp_driver_spi/include -I/home/wyp/esp/esp-idf/components/esp_pm/include -I/home/wyp/esp/esp-idf/components/esp_driver_gpio/include -I/home/wyp/esp/esp-idf/components/esp_http_server/include -I/home/wyp/esp/esp-idf/components/http_parser -I/home/wyp/esp/esp-idf/components/esp_event/include -I/home/wyp/esp/esp-idf/components/esp_http_client/include -I/home/wyp/esp/esp-idf/components/esp_netif/include -I/home/wyp/esp/esp-idf/components/esp_wifi/include -I/home/wyp/esp/esp-idf/components/esp_wifi/include/local -I/home/wyp/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/wyp/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/wyp/esp/esp-idf/components/esp_phy/include -I/home/wyp/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/wyp/esp/esp-idf/components/bt/include/esp32c3/include -I/home/wyp/esp/esp-idf/components/bt/common/osi/include -I/home/wyp/esp/esp-idf/components/bt/common/api/include/api -I/home/wyp/esp/esp-idf/components/bt/common/btc/profile/esp/blufi/include -I/home/wyp/esp/esp-idf/components/bt/common/btc/profile/esp/include -I/home/wyp/esp/esp-idf/components/bt/common/hci_log/include -I/home/wyp/esp/esp-idf/components/bt/common/ble_log/include -I/home/wyp/esp/esp-idf/components/bt/host/bluedroid/api/include/api -I/home/wyp/esp/esp-idf/components/bt/common/tinycrypt/include -I/home/wyp/esp/esp-idf/components/bt/common/tinycrypt/port -I/home/wyp/esp/esp-idf/components/esp_timer/include -I/home/wyp/esp/esp-idf/components/nvs_flash/include -I/home/wyp/esp/esp-idf/components/esp_partition/include -I/home/wyp/esp/stem_framework_idf61_lcd/components/comm_wifi/include -I/home/wyp/esp/stem_framework_idf61_lcd/components/comm_ble/include -I/home/wyp/esp/esp-idf/components/json/cJSON -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/wyp/esp/stem_framework_idf61_lcd=. -fmacro-prefix-map=/home/wyp/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/experiments/exp_gpio.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/experiments/exp_gpio.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/experiments/exp_gpio.c.obj -c /home/wyp/esp/stem_framework_idf61_lcd/main/experiments/exp_gpio.c
/home/wyp/esp/stem_framework_idf61_lcd/main/experiments/exp_gpio.c:125:13: error: conflicting types for 'on_exit'; have 'void(ExperimentContext *)'
  125 | static void on_exit(ExperimentContext* ctx)
      |             ^~~~~~~
In file included from /home/wyp/esp/esp-idf/components/newlib/platform_include/assert.h:12,
                 from /home/wyp/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/xtensa-esp-elf/include/sys/reent.h:458,
                 from /home/wyp/esp/esp-idf/components/newlib/platform_include/sys/reent.h:15,
                 from /home/wyp/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:60,
                 from /home/wyp/esp/esp-idf/components/newlib/platform_include/stdio.h:10,
                 from /home/wyp/esp/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:9,
                 from /home/wyp/esp/stem_framework_idf61_lcd/main/experiments/exp_gpio.c:4:
/home/wyp/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/xtensa-esp-elf/include/stdlib.h:199:9: note: previous declaration of 'on_exit' with type 'int(void (*)(int,  void *), void *)'
  199 | int     on_exit (void (*__func)(int, void *),void *__arg);
      |         ^~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/wyp/esp/stem_framework_idf61_lcd/build/bootloader/esp-idf/esptool_py && /home/wyp/.espressif/python_env/idf5.5_py3.10_env/bin/python /home/wyp/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/wyp/esp/stem_framework_idf61_lcd/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
ninja: build stopped: subcommand failed.
